# Reddit-King

./: .env.example  .gitignore  LICENSE  README.md  Reddit-King.bat  build-mac.sh  build.bat  collector.py  launcher.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml
scraper/: __init__.py  reddit_auth.py  reddit_data.py
tests/: test_main.py  test_reddit_auth.py
